cloudformation/general-stack.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC and DB"

Parameters:
  DBPassword:
    Type: String
    Description: Database admin password
    NoEcho: true

  DBInstanceIntelClass:
    Type: String
    Default: db.t3.micro
    Description: Database Intel instance class

  DBInstanceArmClass:
    Type: String
    Default: db.t4g.micro
    Description: Database instance class

  S3BucketName:
    Type: String
    Description: Name of the S3 bucket for the application

  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair (optional if using SSM only)

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: TYPE
          Value: VPC

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: TYPE
          Value: VPC

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: TYPE
          Value: VPC

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: "us-east-2b"
      Tags:
        - Key: TYPE
          Value: VPC

  # Private Subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: TYPE
          Value: VPC

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.4.0/24"
      AvailabilityZone: "us-east-2b"
      Tags:
        - Key: TYPE
          Value: VPC

  # NAT Gateway
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      Tags:
        - Key: TYPE
          Value: VPC

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: TYPE
          Value: VPC

  # Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: TYPE
          Value: VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: TYPE
          Value: VPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # S3 VPC Endpoint
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:*"
            Resource:
              - "*"
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC
      Tags:
        - Key: TYPE
          Value: VPC
        - Key: auto-delete
          Value: no

  # DB Subnet Group
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    DeletionPolicy: Retain
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: TYPE
          Value: DB

  # Security Group for DB Access
  SGDBAccess:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: Security group for DB access
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: SG-DB-Access
        - Key: TYPE
          Value: DB

  # Security Group for RDS
  SGDB:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: Security group for RDS
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref SGDBAccess
      Tags:
        - Key: Name
          Value: SG-DB
        - Key: TYPE
          Value: DB

  # RDS Parameter Group
  DBParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    DeletionPolicy: Retain
    Properties:
      Family: postgres17
      Description: Custom parameter group for PostgreSQL
      Parameters:
        shared_preload_libraries: "pg_stat_statements"
        pg_stat_statements.track: "all"
      Tags:
        - Key: Name
          Value: !Sub DB-Parameter-Group
        - Key: TYPE
          Value: DB

  RDSInstanceIntel:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      DBName: prod1
      MasterUsername: postgres
      MasterUserPassword: !Ref DBPassword
      Engine: postgres
      EngineVersion: "17.4"
      DBInstanceClass: !Ref DBInstanceIntelClass
      AllocatedStorage: "20"
      MaxAllocatedStorage: "100"
      StorageType: gp3
      MultiAZ: true
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref SGDB
      DBParameterGroupName: !Ref DBParameterGroup
      StorageEncrypted: true
      KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/aws/rds"
      Tags:
        - Key: Name
          Value: PostgreSQL-Primary
        - Key: CPU
          Value: INTEL
        - Key: TYPE
          Value: DB
        - Key: auto-delete
          Value: no

  RDSInstanceArm:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      DBName: prod2
      MasterUsername: postgres
      MasterUserPassword: !Ref DBPassword
      Engine: postgres
      EngineVersion: "17.4"
      DBInstanceClass: !Ref DBInstanceArmClass
      AllocatedStorage: "20"
      MaxAllocatedStorage: "100"
      StorageType: gp3
      MultiAZ: true
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref SGDB
      DBParameterGroupName: !Ref DBParameterGroup
      StorageEncrypted: true
      KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/aws/rds"
      Tags:
        - Key: Name
          Value: PostgreSQL-Secundary
        - Key: CPU
          Value: ARM
        - Key: TYPE
          Value: DB
        - Key: auto-delete
          Value: no

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref S3BucketName
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: TYPE
          Value: S3

  # Security Group
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow minimal inbound traffic
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  # IAM Role for SSM
  EC2SSMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  # Instance Profile for EC2
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2SSMRole

  # EC2 Instance
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      IamInstanceProfile: !Ref EC2InstanceProfile
      ImageId: ami-0d9a665f802ae6227
      NetworkInterfaces:
        - AssociatePublicIpAddress: false
          DeviceIndex: 0
          SubnetId: !Ref PublicSubnet1
          GroupSet:
            - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: SSM-Managed-Instance

  # Elastic IP
  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance

  # RDSReadReplica:
  #   Type: AWS::RDS::DBInstance
  #   DeletionPolicy: Retain
  #   UpdateReplacePolicy: Retain
  #   Properties:
  #     SourceDBInstanceIdentifier: !Ref RDSInstance
  #     DBInstanceClass: !If
  #       - IsGraviton
  #       - db.m6i.large
  #       - db.m6g.large
  #     Engine: postgres
  #     PubliclyAccessible: false
  #     VPCSecurityGroups:
  #       - !Ref SGDB
  #     StorageEncrypted: true
  #     KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/aws/rds"
  #     Tags:
  #       - Key: Name
  #         Value: PostgreSQL-ReadReplica
  #       - Key: CPU
  #         Value: !If
  #           - IsGraviton
  #           - INTEL
  #           - ARM
  #       - Key: TYPE
  #         Value: DB
  #       - Key: auto-delete
  #         Value: no

Outputs:
  #VPC
  VpcId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}::VpcId"
  PublicSubnet1:
    Description: Public Subnet 1 ID
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}::PublicSubnet1"
  PublicSubnet2:
    Description: Public Subnet 2 ID
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}::PublicSubnet2"
  PrivateSubnet1:
    Description: Private Subnet 1 ID
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}::PrivateSubnet1"
  PrivateSubnet2:
    Description: Private Subnet 2 ID
    Value: !Ref PrivateSubnet2
    Export:
      Name:
        !Sub "${AWS::StackName}::PrivateSubnet2"

        # Database
  DBEndpointIntel:
    Description: Database endpoint
    Value: !GetAtt RDSInstanceIntel.Endpoint.Address
    Export:
      Name: !Sub ${AWS::StackName}::DBEndpointIntel

  DBEndpointArm:
    Description: Database endpoint
    Value: !GetAtt RDSInstanceArm.Endpoint.Address
    Export:
      Name: !Sub ${AWS::StackName}::DBEndpointArm

  DBPort:
    Description: Database port
    Value: !GetAtt RDSInstanceIntel.Endpoint.Port

  # ReadReplicaEndpoint:
  #   Description: Read Replica endpoint
  #   Value: !GetAtt RDSReadReplica.Endpoint.Address
  #   Export:
  #     Name: !Sub ${AWS::StackName}::ReadReplicaEndpoint

  DBAccessSecurityGroup:
    Description: Security Group ID for DB Access
    Value: !Ref SGDBAccess
    Export:
      Name: !Sub ${AWS::StackName}::SGDBAccess

  S3BucketName:
    Description: Application S3 bucket name
    Value: !Ref S3BucketName
    Export:
      Name: !Sub S3BucketName-${AWS::StackName}

  InstanceId:
    Description: Instance ID
    Value: !Ref EC2Instance

  ElasticIPAddress:
    Description: Elastic IP assigned to the instance
    Value: !Ref ElasticIP

  InstanceSecurityGroup:
    Description: Security Group ID for the bastion/EC2 instance
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}::InstanceSecurityGroup"
